Add special move interval functionality

--- a/notebooks/special_moves.ipynb
+++ b/notebooks/special_moves.ipynb
@@ -145,7 +145,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x29183474eb0>"
+       "<graphviz.graphs.Digraph at 0x2418a7c34f0>"
       ]
      },
      "execution_count": 7,
@@ -255,7 +255,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x29183559db0>"
+       "<graphviz.graphs.Digraph at 0x2418a7c0b50>"
       ]
      },
      "execution_count": 9,
@@ -308,7 +308,7 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[ 0 -1 -1 -2], thresholds=[0.76202731        nan        nan        nan], leaf_vals=[nan nan nan nan], n_vals=[100  77  -2  -2]),\n",
+       "[Tree(vars=[ 0 -1 -1 -2], thresholds=[0.76202731        nan        nan        nan], leaf_vals=[nan nan nan nan], n_vals=[100  77  23  -2]),\n",
        " Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
        "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2]),\n",
        " Tree(vars=[ 1 -1 -1 -2], thresholds=[0.33203344        nan        nan        nan], leaf_vals=[nan nan nan nan], n_vals=[100  43  57  -2])]"
@@ -382,7 +382,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x291dfcf9f00>"
+       "<graphviz.graphs.Digraph at 0x2418a7c36d0>"
       ]
      },
      "execution_count": 12,
@@ -453,7 +453,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x291dfcfba90>"
+       "<graphviz.graphs.Digraph at 0x2418a7c1870>"
       ]
      },
      "execution_count": 13,
@@ -545,7 +545,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x291835db9a0>"
+       "<graphviz.graphs.Digraph at 0x241ae582e30>"
       ]
      },
      "execution_count": 15,
@@ -691,7 +691,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x29183a77760>"
+       "<graphviz.graphs.Digraph at 0x2418a7c0e50>"
       ]
      },
      "execution_count": 18,
@@ -759,11 +759,11 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[-1 -2], thresholds=[nan nan], leaf_vals=[nan nan], n_vals=[-2 -2]),\n",
+       "[Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2], thresholds=[0.76202731        nan 0.33203344        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   9  14  -2]),\n",
        " Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
        "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2]),\n",
-       " Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2], thresholds=[0.76202731        nan 0.33203344        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   9  14  -2])]"
+       " Tree(vars=[-1 -2], thresholds=[nan nan], leaf_vals=[nan nan], n_vals=[100  -2])]"
       ]
      },
      "execution_count": 21,
@@ -785,10 +785,10 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2]),\n",
-       " Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2], thresholds=[0.76202731        nan 0.33203344        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   9  14  -2])]"
+       "[Tree(vars=[ 0 -1  1 -2 -2 -1 -1 -2], thresholds=[0.76202731        nan 0.33203344        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2   9  14  -2]),\n",
+       " Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
+       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2])]"
       ]
      },
      "execution_count": 22,
@@ -798,7 +798,7 @@
    ],
    "source": [
     "params = move.proposed\n",
-    "move = Death(params, trees_changed=[2, 0])\n",
+    "move = Death(params, trees_changed=[1, 2])\n",
     "move.propose(rng)\n",
     "move.proposed.trees"
    ]
