--- a/notebooks/four_moves.ipynb
+++ b/notebooks/four_moves.ipynb
@@ -87,7 +87,7 @@
    ],
    "source": [
     "trees = [tree1]\n",
-    "params = Parameters(trees, None)\n",
+    "params = Parameters(trees, global_params={'eps_sigma2': 0.01})\n",
     "params.trees"
    ]
   },
@@ -179,7 +179,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1cfbcdf5e70>"
+       "<graphviz.graphs.Digraph at 0x23256c52170>"
       ]
      },
      "execution_count": 9,
@@ -278,7 +278,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1cfbcdf60e0>"
+       "<graphviz.graphs.Digraph at 0x23257b7cdc0>"
       ]
      },
      "execution_count": 10,
@@ -287,7 +287,8 @@
     }
    ],
    "source": [
-    "params = Parameters(trees, None)\n",
+    "params = Parameters(trees, global_params={'eps_sigma2': 0.01})\n",
+    "\n",
     "move = Grow(params, trees_changed=[0], possible_thresholds=possible_thresholds)\n",
     "move.propose(rng)\n",
     "trees = move.proposed.trees\n",
@@ -311,8 +312,7 @@
     {
      "data": {
       "text/plain": [
-       "[Tree(vars=[ 0 -1 -1 -2 -2 -2 -2 -2], thresholds=[0.76202731        nan        nan        nan        nan        nan\n",
-       "         nan        nan], leaf_vals=[nan nan nan nan nan nan nan nan], n_vals=[100  77  23  -2  -2  -2  -2  -2])]"
+       "[Tree(vars=[ 0 -1 -1 -2], thresholds=[0.76202731        nan        nan        nan], leaf_vals=[nan nan nan nan], n_vals=[100  77  23  -2])]"
       ]
      },
      "execution_count": 11,
@@ -321,7 +321,7 @@
     }
    ],
    "source": [
-    "params = Parameters(trees, None)\n",
+    "params = Parameters(trees, global_params={'eps_sigma2': 0.01})\n",
     "\n",
     "move = Prune(params, trees_changed=[0])\n",
     "move.propose(rng)\n",
@@ -385,7 +385,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1cfbcdf6350>"
+       "<graphviz.graphs.Digraph at 0x23257b4fa60>"
       ]
      },
      "execution_count": 12,
@@ -424,7 +424,7 @@
     }
    ],
    "source": [
-    "params = Parameters(trees, None)\n",
+    "params = Parameters(trees, global_params={'eps_sigma2': 0.01})\n",
     "\n",
     "move = Change(params, trees_changed=[0], possible_thresholds=possible_thresholds)\n",
     "move.propose(rng)\n",
@@ -516,7 +516,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1cfbcdf7190>"
+       "<graphviz.graphs.Digraph at 0x23243196f80>"
       ]
      },
      "execution_count": 14,
@@ -576,7 +576,7 @@
     }
    ],
    "source": [
-    "params = Parameters(trees, None)\n",
+    "params = Parameters(trees, global_params={'eps_sigma2': 0.01})\n",
     "\n",
     "move = Swap(params, trees_changed=[0])\n",
     "move.propose(rng)\n",
@@ -668,7 +668,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1cfbcdf6a70>"
+       "<graphviz.graphs.Digraph at 0x23257b4fe50>"
       ]
      },
      "execution_count": 17,
