--- a/notebooks/test_binary.ipynb
+++ b/notebooks/test_binary.ipynb
@@ -87,8 +87,8 @@
         "        y_pred_prob = np.clip(btpred, 1e-9, 1 - 1e-9)\n",
         "        y_pred = (y_pred_prob > 0.5).astype(int)\n",
         "        \n",
-        "    elif model_name == \"BinaryBART\":\n",
-        "        # Proper binary BART with probit link\n",
+        "    elif model_name == \"BinaryBART\" or model_name == \"LogisticBART\":\n",
+        "        # Proper binary BART\n",
         "        model.fit(X_train, y_train)\n",
         "        proba_output = model.predict_proba(X_test)\n",
         "        y_pred_prob = proba_output[:, 1]\n",
@@ -137,33 +137,29 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:14<00:00, 70.58it/s]\n"
+            "Iterations: 100%|██████████| 200/200 [00:15<00:00, 12.70it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.867, LogLoss: 0.319, AUC: 0.952\n",
-            "  Training BinaryBART...\n"
+            "    Acc: 0.875, LogLoss: 0.311, AUC: 0.964\n",
+            "  Training LogisticBART...\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:09<00:00, 108.67it/s]\n",
-            "INFO:2025-05-29 07:33:04,240:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
-            "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
+            "Iterations: 100%|██████████| 750/750 [07:12<00:00,  1.73it/s]  \n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.775, LogLoss: 0.550, AUC: 0.871\n",
-            "  Training Bartz...\n",
-            "    Acc: 0.883, LogLoss: 0.329, AUC: 0.949\n",
+            "    Acc: 0.525, LogLoss: 0.695, AUC: 0.422\n",
             "\n",
             "=== Testing on Breast Cancer ===\n",
             "  Training RandomForestClassifier...\n",
@@ -177,31 +173,29 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:09<00:00, 101.84it/s]\n"
+            "Iterations: 100%|██████████| 200/200 [00:03<00:00, 65.00it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.936, LogLoss: 0.146, AUC: 0.984\n",
-            "  Training BinaryBART...\n"
+            "    Acc: 0.953, LogLoss: 0.123, AUC: 0.992\n",
+            "  Training LogisticBART...\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:08<00:00, 116.29it/s]\n"
+            "Iterations: 100%|██████████| 750/750 [00:38<00:00, 19.63it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.942, LogLoss: 0.267, AUC: 0.989\n",
-            "  Training Bartz...\n",
-            "    Acc: 0.947, LogLoss: 0.130, AUC: 0.991\n",
+            "    Acc: 0.380, LogLoss: 0.695, AUC: 0.533\n",
             "\n",
             "=== Testing on Wine Binary ===\n",
             "  Training RandomForestClassifier...\n",
@@ -215,36 +209,36 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:06<00:00, 147.90it/s]\n"
+            "Iterations: 100%|██████████| 200/200 [00:02<00:00, 76.92it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.963, LogLoss: 0.138, AUC: 0.985\n",
-            "  Training BinaryBART...\n"
+            "    Acc: 0.944, LogLoss: 0.122, AUC: 0.988\n",
+            "  Training LogisticBART...\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:06<00:00, 143.93it/s]\n"
+            "Iterations: 100%|██████████| 750/750 [00:28<00:00, 25.96it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.815, LogLoss: 0.479, AUC: 0.977\n",
-            "  Training Bartz...\n",
-            "    Acc: 0.944, LogLoss: 0.117, AUC: 0.994\n"
+            "    Acc: 0.444, LogLoss: 0.696, AUC: 0.400\n"
           ]
         }
       ],
       "source": [
         "# Main evaluation loop\n",
+        "from bart_playground.bart import LogisticBART\n",
+        "\n",
         "datasets = load_datasets()\n",
         "results = []\n",
         "\n",
@@ -260,9 +254,10 @@
         "    models = {\n",
         "        \"RandomForestClassifier\": RandomForestClassifier(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
         "        \"RandomForestRegressor\": RandomForestRegressor(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
-        "        \"DefaultBART\": DefaultBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
-        "        \"BinaryBART\": BinaryBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
-        "        \"Bartz\": \"placeholder\"\n",
+        "        \"DefaultBART\": DefaultBART(n_trees=N_TREES, ndpost=NDPOST // 5, nskip=NSKIP // 5, random_state=RANDOM_STATE),\n",
+        "        # \"BinaryBART\": BinaryBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
+        "        \"LogisticBART\": LogisticBART(n_trees=N_TREES // 2, ndpost=NDPOST, nskip=NSKIP // 2, random_state=RANDOM_STATE),\n",
+        "        # \"Bartz\": \"placeholder\"\n",
         "    }\n",
         "    \n",
         "    for model_name, model in models.items():\n",
@@ -280,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -349,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
