Fixed LogisticBART bugs
bool arrays -> float arrays; fixed a math expression bug (leaf values should be log Lambda)

--- a/notebooks/test_binary.ipynb
+++ b/notebooks/test_binary.ipynb
@@ -126,9 +126,9 @@
           "text": [
             "\n",
             "=== Testing on Synthetic ===\n",
-            "  Training RandomForestClassifier...\n",
-            "    Acc: 0.900, LogLoss: 0.318, AUC: 0.956\n",
-            "  Training RandomForestRegressor...\n",
+            "  Training RFClassifier...\n",
+            "    Acc: 0.900, LogLoss: 2.072, AUC: 0.900\n",
+            "  Training RFRegressor...\n",
             "    Acc: 0.858, LogLoss: 0.341, AUC: 0.932\n",
             "  Training DefaultBART...\n"
           ]
@@ -137,14 +137,29 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 200/200 [00:15<00:00, 12.70it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:14<00:00, 68.52it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.875, LogLoss: 0.311, AUC: 0.964\n",
+            "    Acc: 0.867, LogLoss: 0.319, AUC: 0.952\n",
+            "  Training BinaryBART...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 96.39it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    Acc: 0.808, LogLoss: 0.554, AUC: 0.875\n",
             "  Training LogisticBART...\n"
           ]
         },
@@ -152,19 +167,19 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 750/750 [07:12<00:00,  1.73it/s]  \n"
+            "Iterations: 100%|██████████| 1000/1000 [00:50<00:00, 19.65it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.525, LogLoss: 0.695, AUC: 0.422\n",
+            "    Acc: 0.850, LogLoss: 0.326, AUC: 0.939\n",
             "\n",
             "=== Testing on Breast Cancer ===\n",
-            "  Training RandomForestClassifier...\n",
-            "    Acc: 0.924, LogLoss: 0.124, AUC: 0.991\n",
-            "  Training RandomForestRegressor...\n",
+            "  Training RFClassifier...\n",
+            "    Acc: 0.924, LogLoss: 1.575, AUC: 0.920\n",
+            "  Training RFRegressor...\n",
             "    Acc: 0.942, LogLoss: 0.118, AUC: 0.989\n",
             "  Training DefaultBART...\n"
           ]
@@ -173,14 +188,29 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 200/200 [00:03<00:00, 65.00it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:09<00:00, 100.88it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.953, LogLoss: 0.123, AUC: 0.992\n",
+            "    Acc: 0.936, LogLoss: 0.146, AUC: 0.984\n",
+            "  Training BinaryBART...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations: 100%|██████████| 1000/1000 [00:09<00:00, 101.76it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    Acc: 0.936, LogLoss: 0.264, AUC: 0.988\n",
             "  Training LogisticBART...\n"
           ]
         },
@@ -188,19 +218,21 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 750/750 [00:38<00:00, 19.63it/s]\n"
+            "Iterations:   0%|          | 0/1000 [00:00<?, ?it/s]/home/ubuntu/OneDrive/bart_sync/bart-playground/bart_playground/util.py:234: RuntimeWarning: invalid value encountered in multiply\n",
+            "  result[chi_zero_mask] = (2.0 / psi_chi_zero)**eta_chi_zero * gamma(eta_chi_zero)\n",
+            "Iterations: 100%|██████████| 1000/1000 [00:39<00:00, 25.51it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.380, LogLoss: 0.695, AUC: 0.533\n",
+            "    Acc: 0.953, LogLoss: 0.115, AUC: 0.992\n",
             "\n",
             "=== Testing on Wine Binary ===\n",
-            "  Training RandomForestClassifier...\n",
-            "    Acc: 0.926, LogLoss: 0.155, AUC: 0.992\n",
-            "  Training RandomForestRegressor...\n",
+            "  Training RFClassifier...\n",
+            "    Acc: 0.926, LogLoss: 1.535, AUC: 0.903\n",
+            "  Training RFRegressor...\n",
             "    Acc: 0.926, LogLoss: 0.519, AUC: 0.950\n",
             "  Training DefaultBART...\n"
           ]
@@ -209,14 +241,29 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 200/200 [00:02<00:00, 76.92it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:06<00:00, 147.02it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.944, LogLoss: 0.122, AUC: 0.988\n",
+            "    Acc: 0.963, LogLoss: 0.138, AUC: 0.985\n",
+            "  Training BinaryBART...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations: 100%|██████████| 1000/1000 [00:08<00:00, 117.16it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    Acc: 0.815, LogLoss: 0.462, AUC: 0.986\n",
             "  Training LogisticBART...\n"
           ]
         },
@@ -224,14 +271,14 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 750/750 [00:28<00:00, 25.96it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:49<00:00, 20.09it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.444, LogLoss: 0.696, AUC: 0.400\n"
+            "    Acc: 0.963, LogLoss: 0.124, AUC: 0.992\n"
           ]
         }
       ],
@@ -252,11 +299,11 @@
         "    \n",
         "    # Define models\n",
         "    models = {\n",
-        "        \"RandomForestClassifier\": RandomForestClassifier(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
-        "        \"RandomForestRegressor\": RandomForestRegressor(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
-        "        \"DefaultBART\": DefaultBART(n_trees=N_TREES, ndpost=NDPOST // 5, nskip=NSKIP // 5, random_state=RANDOM_STATE),\n",
-        "        # \"BinaryBART\": BinaryBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
-        "        \"LogisticBART\": LogisticBART(n_trees=N_TREES // 2, ndpost=NDPOST, nskip=NSKIP // 2, random_state=RANDOM_STATE),\n",
+        "        \"RFClassifier\": RandomForestClassifier(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
+        "        \"RFRegressor\": RandomForestRegressor(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
+        "        \"DefaultBART\": DefaultBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
+        "        \"BinaryBART\": BinaryBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
+        "        \"LogisticBART\": LogisticBART(n_trees=N_TREES // 2, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
         "        # \"Bartz\": \"placeholder\"\n",
         "    }\n",
         "    \n",
@@ -275,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -288,43 +335,43 @@
             "============================================================\n",
             "\n",
             "Accuracy:\n",
-            "Model          Bartz  BinaryBART  DefaultBART  RandomForestClassifier  \\\n",
-            "Dataset                                                                 \n",
-            "Breast Cancer  0.947       0.942        0.936                   0.924   \n",
-            "Synthetic      0.883       0.775        0.867                   0.900   \n",
-            "Wine Binary    0.944       0.815        0.963                   0.926   \n",
+            "Model          BinaryBART  DefaultBART  LogisticBART  RFClassifier  \\\n",
+            "Dataset                                                              \n",
+            "Breast Cancer       0.936        0.936         0.953         0.924   \n",
+            "Synthetic           0.808        0.867         0.850         0.900   \n",
+            "Wine Binary         0.815        0.963         0.963         0.926   \n",
             "\n",
-            "Model          RandomForestRegressor  \n",
-            "Dataset                               \n",
-            "Breast Cancer                  0.942  \n",
-            "Synthetic                      0.858  \n",
-            "Wine Binary                    0.926  \n",
+            "Model          RFRegressor  \n",
+            "Dataset                     \n",
+            "Breast Cancer        0.942  \n",
+            "Synthetic            0.858  \n",
+            "Wine Binary          0.926  \n",
             "\n",
             "AUC:\n",
-            "Model          Bartz  BinaryBART  DefaultBART  RandomForestClassifier  \\\n",
-            "Dataset                                                                 \n",
-            "Breast Cancer  0.991       0.989        0.984                   0.991   \n",
-            "Synthetic      0.949       0.871        0.952                   0.956   \n",
-            "Wine Binary    0.994       0.977        0.985                   0.992   \n",
+            "Model          BinaryBART  DefaultBART  LogisticBART  RFClassifier  \\\n",
+            "Dataset                                                              \n",
+            "Breast Cancer       0.988        0.984         0.992         0.920   \n",
+            "Synthetic           0.875        0.952         0.939         0.900   \n",
+            "Wine Binary         0.986        0.985         0.992         0.903   \n",
             "\n",
-            "Model          RandomForestRegressor  \n",
-            "Dataset                               \n",
-            "Breast Cancer                  0.989  \n",
-            "Synthetic                      0.932  \n",
-            "Wine Binary                    0.950  \n",
+            "Model          RFRegressor  \n",
+            "Dataset                     \n",
+            "Breast Cancer        0.989  \n",
+            "Synthetic            0.932  \n",
+            "Wine Binary          0.950  \n",
             "\n",
             "LogLoss:\n",
-            "Model          Bartz  BinaryBART  DefaultBART  RandomForestClassifier  \\\n",
-            "Dataset                                                                 \n",
-            "Breast Cancer  0.130       0.267        0.146                   0.124   \n",
-            "Synthetic      0.329       0.550        0.319                   0.318   \n",
-            "Wine Binary    0.117       0.479        0.138                   0.155   \n",
+            "Model          BinaryBART  DefaultBART  LogisticBART  RFClassifier  \\\n",
+            "Dataset                                                              \n",
+            "Breast Cancer       0.264        0.146         0.115         1.575   \n",
+            "Synthetic           0.554        0.319         0.326         2.072   \n",
+            "Wine Binary         0.462        0.138         0.124         1.535   \n",
             "\n",
-            "Model          RandomForestRegressor  \n",
-            "Dataset                               \n",
-            "Breast Cancer                  0.118  \n",
-            "Synthetic                      0.341  \n",
-            "Wine Binary                    0.519  \n"
+            "Model          RFRegressor  \n",
+            "Dataset                     \n",
+            "Breast Cancer        0.118  \n",
+            "Synthetic            0.341  \n",
+            "Wine Binary          0.519  \n"
           ]
         }
       ],
@@ -340,55 +387,6 @@
         "    print(f\"\\n{metric}:\")\n",
         "    pivot = results_df.pivot_table(index='Dataset', columns='Model', values=metric)\n",
         "    print(pivot.round(3))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Best Models per Dataset:\n",
-            "\n",
-            "Synthetic:\n",
-            "  Best Accuracy: RandomForestClassifier (0.900)\n",
-            "  Best AUC: RandomForestClassifier (0.956)\n",
-            "  Best LogLoss: RandomForestClassifier (0.318)\n",
-            "\n",
-            "Breast Cancer:\n",
-            "  Best Accuracy: Bartz (0.947)\n",
-            "  Best AUC: RandomForestClassifier (0.991)\n",
-            "  Best LogLoss: RandomForestRegressor (0.118)\n",
-            "\n",
-            "Wine Binary:\n",
-            "  Best Accuracy: DefaultBART (0.963)\n",
-            "  Best AUC: Bartz (0.994)\n",
-            "  Best LogLoss: Bartz (0.117)\n",
-            "\n",
-            "Testing complete!\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Best model per dataset\n",
-        "print(\"\\nBest Models per Dataset:\")\n",
-        "for dataset in results_df['Dataset'].unique():\n",
-        "    dataset_results = results_df[results_df['Dataset'] == dataset]\n",
-        "    \n",
-        "    best_acc = dataset_results.loc[dataset_results['Accuracy'].idxmax()]\n",
-        "    best_auc = dataset_results.loc[dataset_results['AUC'].idxmax()]\n",
-        "    best_ll = dataset_results.loc[dataset_results['LogLoss'].idxmin()]\n",
-        "    \n",
-        "    print(f\"\\n{dataset}:\")\n",
-        "    print(f\"  Best Accuracy: {best_acc['Model']} ({best_acc['Accuracy']:.3f})\")\n",
-        "    print(f\"  Best AUC: {best_auc['Model']} ({best_auc['AUC']:.3f})\")\n",
-        "    print(f\"  Best LogLoss: {best_ll['Model']} ({best_ll['LogLoss']:.3f})\")\n",
-        "\n",
-        "print(\"\\nTesting complete!\")\n"
       ]
     }
   ],
