Fixed a minor bug (numerical instability)

--- a/notebooks/test_binary.ipynb
+++ b/notebooks/test_binary.ipynb
@@ -130,36 +130,6 @@
             "    Acc: 0.900, LogLoss: 2.072, AUC: 0.900\n",
             "  Training RFRegressor...\n",
             "    Acc: 0.858, LogLoss: 0.341, AUC: 0.932\n",
-            "  Training DefaultBART...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:14<00:00, 68.52it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Acc: 0.867, LogLoss: 0.319, AUC: 0.952\n",
-            "  Training BinaryBART...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 96.39it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Acc: 0.808, LogLoss: 0.554, AUC: 0.875\n",
             "  Training LogisticBART...\n"
           ]
         },
@@ -167,50 +137,27 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:50<00:00, 19.65it/s]\n"
+            "Iterations:   0%|          | 0/1000 [00:00<?, ?it/s]"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations: 100%|██████████| 1000/1000 [00:55<00:00, 18.14it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.850, LogLoss: 0.326, AUC: 0.939\n",
+            "    Acc: 0.850, LogLoss: 0.319, AUC: 0.944\n",
             "\n",
             "=== Testing on Breast Cancer ===\n",
             "  Training RFClassifier...\n",
             "    Acc: 0.924, LogLoss: 1.575, AUC: 0.920\n",
             "  Training RFRegressor...\n",
             "    Acc: 0.942, LogLoss: 0.118, AUC: 0.989\n",
-            "  Training DefaultBART...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:09<00:00, 100.88it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Acc: 0.936, LogLoss: 0.146, AUC: 0.984\n",
-            "  Training BinaryBART...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:09<00:00, 101.76it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Acc: 0.936, LogLoss: 0.264, AUC: 0.988\n",
             "  Training LogisticBART...\n"
           ]
         },
@@ -218,52 +165,20 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations:   0%|          | 0/1000 [00:00<?, ?it/s]/home/ubuntu/OneDrive/bart_sync/bart-playground/bart_playground/util.py:234: RuntimeWarning: invalid value encountered in multiply\n",
-            "  result[chi_zero_mask] = (2.0 / psi_chi_zero)**eta_chi_zero * gamma(eta_chi_zero)\n",
-            "Iterations: 100%|██████████| 1000/1000 [00:39<00:00, 25.51it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:59<00:00, 16.78it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.953, LogLoss: 0.115, AUC: 0.992\n",
+            "    Acc: 0.965, LogLoss: 0.114, AUC: 0.992\n",
             "\n",
             "=== Testing on Wine Binary ===\n",
             "  Training RFClassifier...\n",
             "    Acc: 0.926, LogLoss: 1.535, AUC: 0.903\n",
             "  Training RFRegressor...\n",
             "    Acc: 0.926, LogLoss: 0.519, AUC: 0.950\n",
-            "  Training DefaultBART...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:06<00:00, 147.02it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Acc: 0.963, LogLoss: 0.138, AUC: 0.985\n",
-            "  Training BinaryBART...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:08<00:00, 117.16it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Acc: 0.815, LogLoss: 0.462, AUC: 0.986\n",
             "  Training LogisticBART...\n"
           ]
         },
@@ -271,7 +186,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:49<00:00, 20.09it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:50<00:00, 19.74it/s]\n"
           ]
         },
         {
@@ -285,6 +200,8 @@
       "source": [
         "# Main evaluation loop\n",
         "from bart_playground.bart import LogisticBART\n",
+        "\n",
+        "old_settings = np.seterr(invalid='raise')\n",
         "\n",
         "datasets = load_datasets()\n",
         "results = []\n",
@@ -301,8 +218,8 @@
         "    models = {\n",
         "        \"RFClassifier\": RandomForestClassifier(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
         "        \"RFRegressor\": RandomForestRegressor(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
-        "        \"DefaultBART\": DefaultBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
-        "        \"BinaryBART\": BinaryBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
+        "        # \"DefaultBART\": DefaultBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
+        "        # \"BinaryBART\": BinaryBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
         "        \"LogisticBART\": LogisticBART(n_trees=N_TREES // 2, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
         "        # \"Bartz\": \"placeholder\"\n",
         "    }\n",
@@ -318,6 +235,17 @@
         "        results.append(result)\n",
         "        \n",
         "        print(f\"    Acc: {metrics['Accuracy']:.3f}, LogLoss: {metrics['LogLoss']:.3f}, AUC: {metrics['AUC']:.3f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%prun -s cumtime -D profile_bart.prof -q evaluate_model(\n",
+        "!gprof2dot -f pstats profile_bart.prof -o profile_bart.dot\n",
+        "!dot -Tpng profile_bart.dot -o profile_bart.png"
       ]
     },
     {
