--- a/notebooks/test_binary.ipynb
+++ b/notebooks/test_binary.ipynb
@@ -119,6 +119,52 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {},
+      "outputs": [],
+      "source": [
+        "# If debug then run with only one dataset and record running time\n",
+        "# Otherwise run with all datasets\n",
+        "debug = False"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from bart_playground.bart import LogisticBART\n",
+        "\n",
+        "old_settings = np.seterr(invalid='raise')\n",
+        "\n",
+        "datasets = load_datasets()\n",
+        "results = []"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dataset: Synthetic, X shape: (400, 8), y shape: (400,)\n",
+            "Dataset: Breast Cancer, X shape: (569, 30), y shape: (569,)\n",
+            "Dataset: Wine Binary, X shape: (178, 13), y shape: (178,)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Print dataset shapes\n",
+        "for name, (X, y) in datasets.items():\n",
+        "    print(f\"Dataset: {name}, X shape: {X.shape}, y shape: {y.shape}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
@@ -130,6 +176,36 @@
             "    Acc: 0.900, LogLoss: 2.072, AUC: 0.900\n",
             "  Training RFRegressor...\n",
             "    Acc: 0.858, LogLoss: 0.341, AUC: 0.932\n",
+            "  Training DefaultBART...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations: 100%|██████████| 1000/1000 [00:14<00:00, 68.64it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    Acc: 0.867, LogLoss: 0.319, AUC: 0.952\n",
+            "  Training BinaryBART...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 92.03it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    Acc: 0.808, LogLoss: 0.554, AUC: 0.875\n",
             "  Training LogisticBART...\n"
           ]
         },
@@ -137,27 +213,54 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations:   0%|          | 0/1000 [00:00<?, ?it/s]"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:55<00:00, 18.14it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 91.17it/s]\n",
+            "INFO:2025-06-03 16:27:23,076:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+            "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.850, LogLoss: 0.319, AUC: 0.944\n",
+            "    Acc: 0.867, LogLoss: 0.326, AUC: 0.936\n",
+            "  Training Bartz...\n",
+            "    Acc: 0.883, LogLoss: 0.329, AUC: 0.949\n",
             "\n",
             "=== Testing on Breast Cancer ===\n",
             "  Training RFClassifier...\n",
             "    Acc: 0.924, LogLoss: 1.575, AUC: 0.920\n",
             "  Training RFRegressor...\n",
             "    Acc: 0.942, LogLoss: 0.118, AUC: 0.989\n",
+            "  Training DefaultBART...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 96.31it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    Acc: 0.936, LogLoss: 0.146, AUC: 0.984\n",
+            "  Training BinaryBART...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 99.08it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    Acc: 0.936, LogLoss: 0.264, AUC: 0.988\n",
             "  Training LogisticBART...\n"
           ]
         },
@@ -165,20 +268,52 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:59<00:00, 16.78it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 91.51it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.965, LogLoss: 0.114, AUC: 0.992\n",
+            "    Acc: 0.965, LogLoss: 0.113, AUC: 0.991\n",
+            "  Training Bartz...\n",
+            "    Acc: 0.947, LogLoss: 0.130, AUC: 0.991\n",
             "\n",
             "=== Testing on Wine Binary ===\n",
             "  Training RFClassifier...\n",
             "    Acc: 0.926, LogLoss: 1.535, AUC: 0.903\n",
             "  Training RFRegressor...\n",
             "    Acc: 0.926, LogLoss: 0.519, AUC: 0.950\n",
+            "  Training DefaultBART...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations: 100%|██████████| 1000/1000 [00:07<00:00, 142.74it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    Acc: 0.963, LogLoss: 0.138, AUC: 0.985\n",
+            "  Training BinaryBART...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Iterations: 100%|██████████| 1000/1000 [00:08<00:00, 112.50it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    Acc: 0.815, LogLoss: 0.462, AUC: 0.986\n",
             "  Training LogisticBART...\n"
           ]
         },
@@ -186,26 +321,20 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1000/1000 [00:50<00:00, 19.74it/s]\n"
+            "Iterations: 100%|██████████| 1000/1000 [00:10<00:00, 93.43it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.963, LogLoss: 0.124, AUC: 0.992\n"
+            "    Acc: 0.963, LogLoss: 0.133, AUC: 0.991\n",
+            "  Training Bartz...\n",
+            "    Acc: 0.944, LogLoss: 0.117, AUC: 0.994\n"
           ]
         }
       ],
       "source": [
-        "# Main evaluation loop\n",
-        "from bart_playground.bart import LogisticBART\n",
-        "\n",
-        "old_settings = np.seterr(invalid='raise')\n",
-        "\n",
-        "datasets = load_datasets()\n",
-        "results = []\n",
-        "\n",
         "for dataset_name, (X, y) in datasets.items():\n",
         "    print(f\"\\n=== Testing on {dataset_name} ===\")\n",
         "    \n",
@@ -218,17 +347,19 @@
         "    models = {\n",
         "        \"RFClassifier\": RandomForestClassifier(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
         "        \"RFRegressor\": RandomForestRegressor(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
-        "        # \"DefaultBART\": DefaultBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
-        "        # \"BinaryBART\": BinaryBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
+        "        \"DefaultBART\": DefaultBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
+        "        \"BinaryBART\": BinaryBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
         "        \"LogisticBART\": LogisticBART(n_trees=N_TREES // 2, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
-        "        # \"Bartz\": \"placeholder\"\n",
+        "        \"Bartz\": \"placeholder\"\n",
         "    }\n",
         "    \n",
         "    for model_name, model in models.items():\n",
         "        print(f\"  Training {model_name}...\")\n",
         "        \n",
         "        X_tr, X_te = X_train, X_test\n",
-        "            \n",
+        "        \n",
+        "        if(debug == True):\n",
+        "            continue    \n",
         "        metrics = evaluate_model(model, model_name, X_tr, X_te, y_train, y_test)\n",
         "        \n",
         "        result = {'Dataset': dataset_name, 'Model': model_name, **metrics}\n",
@@ -243,14 +374,80 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%prun -s cumtime -D profile_bart.prof -q evaluate_model(\n",
-        "!gprof2dot -f pstats profile_bart.prof -o profile_bart.dot\n",
-        "!dot -Tpng profile_bart.dot -o profile_bart.png"
+        "\n",
+        "for dataset_name, (X, y) in datasets.items():\n",
+        "    print(f\"\\n=== Testing on {dataset_name} ===\")\n",
+        "    \n",
+        "    # Split data\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(\n",
+        "        X, y, test_size=0.3, random_state=RANDOM_STATE, stratify=y\n",
+        "    )\n",
+        "    \n",
+        "    # Define models\n",
+        "    models = {\n",
+        "        \"RFClassifier\": RandomForestClassifier(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
+        "        \"RFRegressor\": RandomForestRegressor(n_estimators=N_TREES, random_state=RANDOM_STATE),\n",
+        "        \"DefaultBART\": DefaultBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
+        "        \"BinaryBART\": BinaryBART(n_trees=N_TREES, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
+        "        \"LogisticBART\": LogisticBART(n_trees=N_TREES // 2, ndpost=NDPOST, nskip=NSKIP, random_state=RANDOM_STATE),\n",
+        "        \"Bartz\": \"placeholder\"\n",
+        "    }\n",
+        "    \n",
+        "    for model_name, model in models.items():\n",
+        "        print(f\"  Training {model_name}...\")\n",
+        "        \n",
+        "        X_tr, X_te = X_train, X_test\n",
+        "        \n",
+        "        if(debug == True):\n",
+        "            continue    \n",
+        "        metrics = evaluate_model(model, model_name, X_tr, X_te, y_train, y_test)\n",
+        "        \n",
+        "        result = {'Dataset': dataset_name, 'Model': model_name, **metrics}\n",
+        "        results.append(result)\n",
+        "        \n",
+        "        print(f\"    Acc: {metrics['Accuracy']:.3f}, LogLoss: {metrics['LogLoss']:.3f}, AUC: {metrics['AUC']:.3f}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "metrics = None\n",
+        " \n",
+        "def record_evaluation_results():\n",
+        "    global metrics\n",
+        "    X_tr, X_te = X_train, X_test\n",
+        "    metrics = evaluate_model(model, model_name, X_tr, X_te, y_train, y_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "if debug == True:\n",
+        "    X_tr, X_te = X_train, X_test\n",
+        "\n",
+        "    %prun -s cumtime -D temp_profile.prof -q record_evaluation_results()\n",
+        "\n",
+        "    fname = \"profile_logbart9\"\n",
+        "\n",
+        "    !mv temp_profile.prof {fname}.prof\n",
+        "    !gprof2dot -f pstats {fname}.prof -o {fname}.dot\n",
+        "    !dot -Tpng {fname}.dot -o {fname}.png\n",
+        "    \n",
+        "    result = {'Dataset': dataset_name, 'Model': model_name, **metrics}\n",
+        "    results.append(result)\n",
+        "    \n",
+        "    print(f\"    Acc: {metrics['Accuracy']:.3f}, LogLoss: {metrics['LogLoss']:.3f}, AUC: {metrics['AUC']:.3f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -263,11 +460,11 @@
             "============================================================\n",
             "\n",
             "Accuracy:\n",
-            "Model          BinaryBART  DefaultBART  LogisticBART  RFClassifier  \\\n",
-            "Dataset                                                              \n",
-            "Breast Cancer       0.936        0.936         0.953         0.924   \n",
-            "Synthetic           0.808        0.867         0.850         0.900   \n",
-            "Wine Binary         0.815        0.963         0.963         0.926   \n",
+            "Model          Bartz  BinaryBART  DefaultBART  LogisticBART  RFClassifier  \\\n",
+            "Dataset                                                                     \n",
+            "Breast Cancer  0.947       0.936        0.936         0.965         0.924   \n",
+            "Synthetic      0.883       0.808        0.867         0.867         0.900   \n",
+            "Wine Binary    0.944       0.815        0.963         0.963         0.926   \n",
             "\n",
             "Model          RFRegressor  \n",
             "Dataset                     \n",
@@ -276,11 +473,11 @@
             "Wine Binary          0.926  \n",
             "\n",
             "AUC:\n",
-            "Model          BinaryBART  DefaultBART  LogisticBART  RFClassifier  \\\n",
-            "Dataset                                                              \n",
-            "Breast Cancer       0.988        0.984         0.992         0.920   \n",
-            "Synthetic           0.875        0.952         0.939         0.900   \n",
-            "Wine Binary         0.986        0.985         0.992         0.903   \n",
+            "Model          Bartz  BinaryBART  DefaultBART  LogisticBART  RFClassifier  \\\n",
+            "Dataset                                                                     \n",
+            "Breast Cancer  0.991       0.988        0.984         0.991         0.920   \n",
+            "Synthetic      0.949       0.875        0.952         0.936         0.900   \n",
+            "Wine Binary    0.994       0.986        0.985         0.991         0.903   \n",
             "\n",
             "Model          RFRegressor  \n",
             "Dataset                     \n",
@@ -289,11 +486,11 @@
             "Wine Binary          0.950  \n",
             "\n",
             "LogLoss:\n",
-            "Model          BinaryBART  DefaultBART  LogisticBART  RFClassifier  \\\n",
-            "Dataset                                                              \n",
-            "Breast Cancer       0.264        0.146         0.115         1.575   \n",
-            "Synthetic           0.554        0.319         0.326         2.072   \n",
-            "Wine Binary         0.462        0.138         0.124         1.535   \n",
+            "Model          Bartz  BinaryBART  DefaultBART  LogisticBART  RFClassifier  \\\n",
+            "Dataset                                                                     \n",
+            "Breast Cancer  0.130       0.264        0.146         0.113         1.575   \n",
+            "Synthetic      0.329       0.554        0.319         0.326         2.072   \n",
+            "Wine Binary    0.117       0.462        0.138         0.133         1.535   \n",
             "\n",
             "Model          RFRegressor  \n",
             "Dataset                     \n",
